2007-11-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: collapse inlaws
	* src/plugins/Ancestors.py: use new calling grandparent string
	* src/plugins/rel_nl.py: change to new API
	* src/plugins/rel_it.py: change comment
	* src/plugins/rel_pl.py: use old filter
	* src/Relationship.py: improvements, protected methods

2007-11-08 Benny Malengier <benny.malengier@gramps-project.org>
	* TODO: update
	* src/DisplayTabs/_EventEmbedList.py: catch managed window crash

2007-11-08 Stéphane Charette <stephanecharette@gmail.com>
	* src/DataViews/_RelationView.py: issue #1352
	* src/GrampsWidgets.py: issue #1352, include all siblings in
	relationship view, but make current person non-linkable

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: fix issue #1350, relative path not working addmedia
	* src/Editors/_EditPerson.py: family rebuild callback error

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: media crash, fix issue #1349, change unicode to Utils

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: english issues
	* src/Relationship.py: english issues

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: fix error with nephew, niece

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gramps.py: text error, issue #1342

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: refractor, use class
	* src/Relationship.py: further improvements
	* src/plugins/rel_pl.py: rename procedure to avoid conflict
	* src/plugins/rel_it.py: start of changes
	* src/DisplayState.py: use the new method get_one_relation

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/gen/proxy/dbbase.py
	add missing gettext import (noticed by chance)

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/test/test/test_util_test.py fix subtle error in test 2a